update pkg tags

--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "comment",
     "regexp",
     "regex",
-    "line"
+    "line",
+    "test",
+    "match",
+    "tag",
+    "block",
+    "ini"
   ],
   "author": "Tomas Kraus",
   "license": "MIT",
