--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "@krausoft/comment-regexp-builder",
   "version": "0.0.2",
   "description": "Create custom comments RegExps. Leading and trailing space tolerant. With a content match.",
-  "main": "index.js",
-  "directories": {
-    "example": "examples",
-    "test": "test"
-  },
+  "main": "build/src/comment-regexp-builder.js",
+  "types": "build/src/comment-regexp-builder.d.ts",
+  "files": [
+    "build/src"
+  ],
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -32,6 +39,11 @@
   },
   "homepage": "https://github.com/krausoft/comment-regexp-builder#readme",
   "devDependencies": {
-    "jest": "^26.6.3"
+    "@types/jest": "^28.1.6",
+    "jest": "^28.0.7",
+    "ts-jest": "^28.0.7",
+    "@types/node": "^18.11.11",
+    "gts": "^3.1.1",
+    "typescript": "~4.9.3"
   }
 }
